[package]
name = "ehub_debug_consumer"
version = "0.2.0"
edition = "2024"
authors = ["DmarshalTU"]
description = "A comprehensive Rust-based debug consumer for Azure Event Hubs with maximum logging capabilities"
license = "MIT"
repository = "https://github.com/DmarshalTU/ehub_debug_consumer"
keywords = ["azure", "event-hubs", "consumer", "debug", "logging", "kubernetes"]
categories = ["development-tools", "web-programming"]

[dependencies]
anyhow = "1.0.100"
azure_core = "0.30.0"
azure_identity = "0.29.0"
azure_messaging_eventhubs = "0.8.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi", "json"] }
